Fix course access chart + add gap
- only GAP dates are shown + slider
- gap is by defualt 30
- fix slider by adding a different one

--- a/client/src/pages/Dashboard/Teacher/Slider.scss
+++ b/client/src/pages/Dashboard/Teacher/Slider.scss
@@ -1,100 +1,37 @@
-.slider-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider {
-  position: relative;
-  width: 90%;
-}
-
-.slider__track,
-.slider__range,
-.slider__left-value,
-.slider__right-value {
-  position: absolute;
-}
-
-.slider__track,
-.slider__range {
-  border-radius: 3px;
-  height: 5px;
-}
-
-.slider__track {
-  background-color: #ced4da;
+input[type='range'] {
+  overflow: hidden;
   width: 100%;
-  z-index: 1;
-}
-
-.slider__range {
-  background-color: #0380f6;
-  z-index: 2;
-}
-
-.slider__left-value,
-.slider__right-value {
-  color: gray;
-  font-size: 12px;
-  margin-top: 10px;
-}
-
-.slider__left-value {
-  left: 0;
-}
-
-.slider__right-value {
-  right: 0;
-}
-
-/* Removing the default appearance */
-.thumb,
-.thumb::-webkit-slider-thumb {
   -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
 }
 
-.thumb {
-  pointer-events: none;
-  position: absolute;
-  height: 0;
-  width: 80%;
-  outline: none;
+input[type='range']::-webkit-slider-runnable-track {
+  height: fit-content;
+  -webkit-appearance: none;
+  background-color: #eeeeee;
+  border-radius: 10px;
 }
 
-.thumb--left {
-  z-index: 3;
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 10px;
+  cursor: ew-resize;
+  background: #087cfc;
 }
 
-.thumb--right {
-  z-index: 4;
+/** FF*/
+input[type="range"]::-moz-range-progress {
+  background-color: #eeeeee;
 }
-
-/* For Chrome browsers */
-.thumb::-webkit-slider-thumb {
-  background-color: #f1f5f7;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 1px 1px #ced4da;
-  cursor: pointer;
-  height: 18px;
-  width: 18px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+input[type="range"]::-moz-range-track {
+  background-color: #eeeeee;
 }
-
-/* For Firefox browsers */
-.thumb::-moz-range-thumb {
-  background-color: #f1f5f7;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 1px 1px #ced4da;
-  cursor: pointer;
-  height: 18px;
-  width: 18px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+/* IE*/
+input[type="range"]::-ms-fill-lower {
+  background-color: #eeeeee;
+}
+input[type="range"]::-ms-fill-upper {
+  background-color: #eeeeee;
 }
